completed rock paper scissor simple game for beginner level

--- a/conditionals.html
+++ b/conditionals.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <script>
-        console.log(3 < 5);
+        /*console.log(3 < 5);
 
         if(false){
             console.log('This is true');
@@ -21,7 +21,9 @@
             console.log('you can drink beer');
         } else{
             console.log("you can't drink")
-        }
+        }*/
+
+        console.log(true && false)
 
     </script>
 </body>
