--- a/optimizedRPS.html
+++ b/optimizedRPS.html
@@ -8,7 +8,7 @@
 <body>
     <p>Rock Paper Scissors</p>
     <button onclick="
-        pickComputerMove();
+        computerMove = pickComputerMove();
 
         console.log(computerMove);
         let result = '';
@@ -25,7 +25,7 @@
     ">Rock</button>
 
     <button onclick="
-        pickComputerMove();
+        computerMove = pickComputerMove();
 
         console.log(computerMove);
         result = '';
@@ -43,7 +43,7 @@
     >Paper</button>
 
     <button onclick="
-        pickComputerMove();
+        const computerMove = pickComputerMove();
 
         console.log(computerMove);
         result = '';
@@ -61,10 +61,10 @@
     >Scissors</button>
 
     <script>
-        let computerMove = '';
-
         function pickComputerMove() {
             const randomNumber = Math.random();
+
+            let computerMove = '';
 
             if(randomNumber >= 0 && randomNumber < 1 / 3){
                 computerMove = 'Rock';
@@ -73,6 +73,8 @@
             } else {
                 computerMove = 'Scissors';
             }
+
+            return computerMove;
         }
     </script>
 </body>
