--- a/optimizedRPS.html
+++ b/optimizedRPS.html
@@ -1,74 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
 </head>
+
 <body>
     <p>Rock Paper Scissors</p>
     <button onclick="
-        computerMove = pickComputerMove();
-
-        console.log(computerMove);
-        let result = '';
-
-        if(computerMove === 'Rock') {
-            result = 'it\'s a Tie';
-        } else if (computerMove === 'Paper') {
-            result = 'You lose';
-        } else {
-            result = 'You win';
-        }
-
-        alert(`you choose Rock, computer choose ${computerMove}. ${result}`);
+        gameMode('Rock')
     ">Rock</button>
 
     <button onclick="
-        computerMove = pickComputerMove();
-
-        console.log(computerMove);
-        result = '';
-
-        if(computerMove === 'Paper') {
-            result = 'it\'s a Tie';
-        } else if (computerMove === 'Scissors') {
-            result = 'You lose';
-        } else {
-            result = 'You win';
-        }
-
-        alert(`you choose Paper, computer choose ${computerMove}. ${result}`);
-    "
-    >Paper</button>
+       gameMode('Paper')
+    ">Paper</button>
 
     <button onclick="
-        const computerMove = pickComputerMove();
-
-        console.log(computerMove);
-        result = '';
-
-        if(computerMove === 'Scissors') {
-            result = 'it\'s a Tie';
-        } else if (computerMove === 'Rock') {
-            result = 'You lose';
-        } else {
-            result = 'You win';
-        }
-
-        alert(`you choose Scissors, computer choose ${computerMove}. ${result}`);
-    "
-    >Scissors</button>
+        gameMode('scissors');
+    ">Scissors</button>
 
     <script>
+        function gameMode(playerMove) {
+            const computerMove = pickComputerMove();
+
+            result = '';
+
+            if (playerMove === 'scissors') {
+                if (computerMove === 'Scissors') {
+                    result = 'it\'s a Tie';
+                } else if (computerMove === 'Rock') {
+                    result = 'You lose';
+                } else {
+                    result = 'You win';
+                }
+
+                alert(`you choose ${playerMove}, computer choose ${computerMove}. ${result}`);
+            } else if (playerMove === 'Rock') {
+                if (computerMove === 'Rock') {
+                    result = 'it\'s a Tie';
+                } else if (computerMove === 'Scissors') {
+                    result = 'You lose';
+                } else {
+                    result = 'You win';
+                }
+
+                alert(`you choose ${playerMove}, computer choose ${computerMove}. ${result}`);
+            } else {
+                if (computerMove === 'Paper') {
+                    result = 'it\'s a Tie';
+                } else if (computerMove === 'Scissors') {
+                    result = 'You lose';
+                } else {
+                    result = 'You win';
+                }
+
+                alert(`you choose ${playerMove}, computer choose ${computerMove}. ${result}`);
+            }
+        }
+
         function pickComputerMove() {
             const randomNumber = Math.random();
 
             let computerMove = '';
 
-            if(randomNumber >= 0 && randomNumber < 1 / 3){
+            if (randomNumber >= 0 && randomNumber < 1 / 3) {
                 computerMove = 'Rock';
-            } else if(randomNumber >= 1 / 3 && randomNumber < 2 / 3){
+            } else if (randomNumber >= 1 / 3 && randomNumber < 2 / 3) {
                 computerMove = 'Paper';
             } else {
                 computerMove = 'Scissors';
@@ -78,4 +77,5 @@
         }
     </script>
 </body>
+
 </html>
