--- a/oop.html
+++ b/oop.html
@@ -14,6 +14,10 @@
 
         console.log(product);
         console.log(product.name);
+
+        // Another way to access object properties
+        console.log(product['price']);
+        console.log(product['price'] + product.price * 0.1);
     </script>
 </body>
 </html>
