updated explainer and added score method to RPS

--- a/scoredRPS.html
+++ b/scoredRPS.html
@@ -26,11 +26,7 @@
     ">Reset Score</button>
 
     <script>
-        const score = {
-            wins: 0,
-            losses: 0,
-            ties: 0
-        };
+        const score = JSON.parse(localStorage.getItem('score'));
 
         function gameMode(playerMove) {
             const computerMove = pickComputerMove();
@@ -74,6 +70,8 @@
                 score.ties += 1;
             }
 
+            localStorage.setItem('score', JSON.stringify(score));
+
             alert(`you choose ${playerMove}, computer choose ${computerMove}. ${result}
 Wins: ${score.wins}, Losses: ${score.losses}, Ties: ${score.ties}`);
 
@@ -83,7 +81,7 @@ Wins: ${score.wins}, Losses: ${score.losses}, Ties: ${score.ties}`);
             score.losses = 0;
             score.ties = 0;
             score.wins = 0;
-
+            localStorage.removeItem('score');
             alert('score reset successfully');
         }
 
