--- a/oop.html
+++ b/oop.html
@@ -20,6 +20,10 @@
         console.log(product['price']);
         console.log(product['price'] + product.price * 0.1);
         console.log(product['delivery-time']);
+
+        // Auto-Boxing Feature of JS
+        const myHello = 'hello'.toUpperCase();
+        console.log(myHello);
     </script>
 </body>
 </html>
