added response to the rock paper scissors game

--- a/scoredRPS.html
+++ b/scoredRPS.html
@@ -26,7 +26,11 @@
     ">Reset Score</button>
 
     <script>
-        const score = JSON.parse(localStorage.getItem('score'));
+        let score = JSON.parse(localStorage.getItem('score')) || {
+            wins: 0,
+            losses: 0,
+            ties: 0
+        }
 
         function gameMode(playerMove) {
             const computerMove = pickComputerMove();
