updated the explainer with latest lessons on DOM

--- a/domGame.html
+++ b/domGame.html
@@ -10,17 +10,7 @@
     <button class="jsSubscribe" onclick="
             subscribe();
         ">Subscribe</button>
-
-        <script>
-            function subscribe(){
-                const buttonElement = document.querySelector('.jsSubscribe');
-
-                if(buttonElement.innerHTML === 'Subscribe'){
-                    buttonElement.innerHTML = 'Subscribed';
-                } else{
-                    buttonElement.innerHTML = 'Subscribe';
-                }
-            }
-        </script>
+        
+    <script src="domGame.js"></script>
 </body>
 </html>
