created the on and off button lesson

--- a/domGame.html
+++ b/domGame.html
@@ -4,6 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DOM Games</title>
+
+    <style>
+        body{
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 20px;
+        }
+
+        .jsSubscribe{
+            color: white;
+            background-color: black;
+            border: none;
+            padding: 10px 15px;
+            font-weight: bold;
+            border-radius: 20px;
+        }
+
+        .isSubscribed{
+            background-color: rgb(240, 240, 240);
+            color: black;
+        }
+    </style>
 </head>
 <body>
     <p>Click the subscribe button below</p>
